Fixed styles in the Internet Explorer browser. Issue: https://code.google.com/p/gwt-cropper/issues/detail?id=4

--- a/src/main/java/com/google/code/gwt/crop/client/GWTCropper.css
+++ b/src/main/java/com/google/code/gwt/crop/client/GWTCropper.css
@@ -11,11 +11,10 @@
 }
 .selection {
 	border: 1px dashed white;
-	z-index: 1;
 }
+.selectionDraggableBackground {}
 .handlesContainer {
 	overflow: visible;
-	z-index: 2;
 }
 .handle {
 	width: handleSize;
